--- a/style.css
+++ b/style.css
@@ -1,12 +1,127 @@
+@font-face {
+    font-family: norse-bold;
+    src: url(./fonts/Norse-Bold.otf);
+}
+
 body {
     display: flex;
+    min-height: 100vh;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .left-super {
     background-image: url("img/fern.jpg");
-    border: 2px solid red;
+    background-size: cover;
+    background-position: center;
+    width: 40vw; 
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.logo-block {
+    width: 100%;
+    background-color: #0000008a;
+    position: absolute;
+    top: 9rem;
+    height: 7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.odin-logo {
+    max-height: 90%;
+    margin: 10px;
+}
+
+.logo-text {
+    color: white;
+    font-size: 5rem;
+    font-family: norse-bold, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    top: 10px;
+}
+
+.photo-cred {
+    color: #ffffff91;
+    align-self: center;
+    position: absolute;
+    bottom: 0;
+    font-size: 10px;
 }
 
 .right-super {
-    border: 2px solid red;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.right-super div {
+    flex: auto;
+}
+
+.info-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: rgb(241, 241, 241);
+    padding: 20px;
+}
+
+.form-block {
+    padding: 0px 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+}
+
+label,input {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    font-size: 8px;
+    font-weight: bold;
+    color: rgb(101, 101, 101);
+    letter-spacing: .1em;
+}
+
+input {
+    border-style: solid;
+    border-color: #E5E7EB;
+    border-radius: 4px;
+    width: 70%;
+    margin-bottom: 15px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid blue;
+    box-shadow: 2px 2px #e5e5e5;
+}
+
+.submit-block {
+    background-color: rgb(241, 241, 241);
+    padding: 20px;
+}
+
+.create-account {
+    color: white;
+    background-color: #596D48;
+    border-radius: 5px;
+    border: none;
+    font-family: inherit;
+    padding: 10px 40px;
+    font-weight: bold;
+}
+
+.log-in {
+    text-decoration: none;
+    color: #596D48;
+    font-weight: bold;
 }
